add in hole face assets with new project card

--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
         </div>
       </div>
       <!--end of project 7-->
+
+      <!-- hole face-->
+      <div class="pcontainer filter-art">
+        <div class="card" id="project21">
+          <div class="is-active"></div>
+          <div class="item_content" id="proj21text">
+            <p class="item_title">Hole Face</p>
+            <p class="item_description">This is a portrait piece that helped me experiment with different brushes</p>
+            <button class="modal-btn" href="#myModal19">click to explore more.</button>
+          </div>
+        </div>
+      </div>
+      <!--end of hole face-->
       
       <!--fan art-->
       <div class="pcontainer filter-art">
