modal doesnt have background for some reason for hole face

--- a/index.html
+++ b/index.html
@@ -2088,6 +2088,43 @@
       </div>
     </div>
 
+    <!--hole face modal-->
+    <div class="modal" id="myModal19">
+      <div class="modal_content">
+        <div class="modal-header">
+          Hole face
+        </div>
+
+        <div class="modal-body">
+
+          <figure class="mbc_container">
+            <img src="/assets/art/hole-face/hole-face.png" alt="hole face" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Hole face</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Hole face</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/hole-face/hole-face_001_lines.png" alt="linework" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Linework</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Linework</p>
+            </span>
+          </figure>
+
+        </div>
+
+        <div class="modal-footer">Hole Face</div>
+
+      </div>
+    </div>
+
+
     <!-- <div class="modal" id="myModal-e">
       <div class="modal-content">
         <div class="modal-header">
