typo was what the issue was about the modal background

--- a/index.html
+++ b/index.html
@@ -2090,7 +2090,7 @@
 
     <!--hole face modal-->
     <div class="modal" id="myModal19">
-      <div class="modal_content">
+      <div class="modal-content">
         <div class="modal-header">
           Hole face
         </div>
@@ -2114,6 +2114,16 @@
             </figcaption>
             <span class="mbc_content-hover">
               <p>Linework</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/hole-face/hole-face_002_basecolour.png" alt="base colour" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Base colour</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Base colour</p>
             </span>
           </figure>
 
