Add second modal section

--- a/index.html
+++ b/index.html
@@ -2178,6 +2178,20 @@
       
     </div> -->
     <!--end of modal container-->
+
+    <!-- SECONDARY IMAGE MODALS-->
+
+    <div class="secondModal" id="mySecModal1">
+      <div class="secondModal_content">
+        <div class="secondModal_header"></div>
+        <div class="secondModal_body">
+          <img src="/assets/art/NOLA/NOLA-ghostsBG.png" alt="Full NOLA photo study" class=""/>
+        </div>
+        <div class="secondModal_footer"></div>
+      </div>
+    </div>
+
+    <!-- END OF SECONDARY MODALS-->
     
     <div id="jsScroll" class="scroll" onclick="topFunc()">
       <i class="fa fa-angle-up"></i>
