--- a/index.html
+++ b/index.html
@@ -2011,7 +2011,7 @@
 
         <div class="modal-body">
 
-          <figure class="mbc_container">
+          <figure class="mbc_container" data-target="#mySecModal1">
             <img src="/assets/art/NOLA/NOLA-ghostsBG.png" alt="nola-bg" class="modal-img" />
             <figcaption class="mbc_content">
               <p>NOLA BG</p>
@@ -2183,11 +2183,11 @@
 
     <div class="secondModal" id="mySecModal1">
       <div class="secondModal_content">
-        <div class="secondModal_header"></div>
+        <div class="secondModal_header">NOLA Ghost BG</div>
         <div class="secondModal_body">
-          <img src="/assets/art/NOLA/NOLA-ghostsBG.png" alt="Full NOLA photo study" class=""/>
+          <img src="/assets/art/NOLA/NOLA-ghostsBG.png" alt="Full NOLA photo study" class="secmodal-img"/>
         </div>
-        <div class="secondModal_footer"></div>
+        <div class="secondModal_footer">NOLA Ghost BG</div>
       </div>
     </div>
 
@@ -2248,6 +2248,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/19.1.3/lazyload.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <script src="/basicEffects.js"></script>
+    <script src="/secondaryModals.js"></script>
     <script src="/filter.js"></script>
   </body>
 </html>
