styles experimentation and more secondary modal blocks

--- a/index.html
+++ b/index.html
@@ -2181,6 +2181,7 @@
 
     <!-- SECONDARY IMAGE MODALS-->
 
+    <!--NOLA images-->
     <div class="secondModal" id="mySecModal1">
       <div class="secondModal_content">
         <div class="secondModal_header">NOLA Ghost BG</div>
@@ -2190,6 +2191,67 @@
         <div class="secondModal_footer">NOLA Ghost BG</div>
       </div>
     </div>
+
+    <div class="secondModal" id="mySecModal2">
+      <div class="secondModal_content">
+        <div class="secondModal_header">NOLA Reference Pic</div>
+        <div class="secondModal_body">
+          <img src="/assets/art/NOLA/NOLA_001_referencePic.png" alt="NOLA reference pic" class="secmodal-img" />
+        </div>
+        <div class="secondModal_footer">NOLA Reference Pic</div>
+      </div>
+    </div>
+
+    <div class="secondModal" id="mySecModal3">
+      <div class="secondModal_content">
+        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_body">
+          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+        </div>
+        <div class="secondModal_footer">NOLA</div>
+      </div>
+    </div>
+
+    <div class="secondModal" id="mySecModal4">
+      <div class="secondModal_content">
+        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_body">
+          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+        </div>
+        <div class="secondModal_footer">NOLA</div>
+      </div>
+    </div>
+
+    <div class="secondModal" id="mySecModal5">
+      <div class="secondModal_content">
+        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_body">
+          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+        </div>
+        <div class="secondModal_footer">NOLA</div>
+      </div>
+    </div>
+
+    <div class="secondModal" id="mySecModal6">
+      <div class="secondModal_content">
+        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_body">
+          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+        </div>
+        <div class="secondModal_footer">NOLA</div>
+      </div>
+    </div>
+
+    <div class="secondModal" id="mySecModal7">
+      <div class="secondModal_content">
+        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_body">
+          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+        </div>
+        <div class="secondModal_footer">NOLA</div>
+      </div>
+    </div>
+    <!--end of NOLA project images-->
 
     <!-- END OF SECONDARY MODALS-->
     
