Add the NOLA secondary modals
Issue of secondary modalas stacking as you open

--- a/index.html
+++ b/index.html
@@ -2021,7 +2021,7 @@
             </span>
           </figure>
 
-          <figure class="mbc_container">
+          <figure class="mbc_container" data-target="#mySecModal2">
             <img src="/assets/art/NOLA/NOLA_001_referencePic.png" alt="Reference Pic" class="modal-img" />
             <figcaption class="mbc_content">
               <p>Reference Pic</p>
@@ -2031,7 +2031,7 @@
             </span>
           </figure>
 
-          <figure class="mbc_container">
+          <figure class="mbc_container" data-target="#mySecModal3">
             <img src="/assets/art/NOLA/NOLA_002_Linework.png" alt="Linework" class="modal-img" />
             <figcaption class="mbc_content">
               <p>Linework</p>
@@ -2041,7 +2041,7 @@
             </span>
           </figure>
 
-          <figure class="mbc_container">
+          <figure class="mbc_container" data-target="#mySecModal4">
             <img src="/assets/art/NOLA/NOLA_003_colour.png" alt="Colour" class="modal-img" />
             <figcaption class="mbc_content">
               <p>Colour</p>
@@ -2051,7 +2051,7 @@
             </span>
           </figure>
 
-          <figure class="mbc_container">
+          <figure class="mbc_container" data-target="#mySecModal5">
             <img src="/assets/art/NOLA/NOLA_004_shading01.png" alt="Shading" class="modal-img" />
             <figcaption class="mbc_content">
               <p>Shading</p>
@@ -2061,7 +2061,7 @@
             </span>
           </figure>
 
-          <figure class="mbc_container">
+          <figure class="mbc_container" data-target="#mySecModal6">
             <img src="/assets/art/NOLA/NOLA_004_shading02.png" alt="Shading2" class="modal-img" />
             <figcaption class="mbc_content">
               <p>Shading 2</p>
@@ -2071,7 +2071,7 @@
             </span>
           </figure>
 
-          <figure class="mbc_container">
+          <figure class="mbc_container" data-target="#mySecModal7">
             <img src="/assets/art/NOLA/NOLA_005_shadingWLinework.png" alt="shading with linework" class="modal-img" />
             <figcaption class="mbc_content">
               <p>Shading with Linework</p>
@@ -2204,51 +2204,51 @@
 
     <div class="secondModal" id="mySecModal3">
       <div class="secondModal_content">
-        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_header">NOLA linework</div>
         <div class="secondModal_body">
-          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+          <img src="/assets/art/NOLA/NOLA_002_Linework.png" alt="NOLA linework" class="secmodal-img" />
         </div>
-        <div class="secondModal_footer">NOLA</div>
+        <div class="secondModal_footer">NOLA linework</div>
       </div>
     </div>
 
     <div class="secondModal" id="mySecModal4">
       <div class="secondModal_content">
-        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_header">NOLA Colour</div>
         <div class="secondModal_body">
-          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+          <img src="/assets/art/NOLA/NOLA_003_colour.png" alt="NOLA Colour" class="secmodal-img" />
         </div>
-        <div class="secondModal_footer">NOLA</div>
+        <div class="secondModal_footer">NOLA Colour</div>
       </div>
     </div>
 
     <div class="secondModal" id="mySecModal5">
       <div class="secondModal_content">
-        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_header">NOLA Shading 01</div>
         <div class="secondModal_body">
-          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+          <img src="/assets/art/NOLA/NOLA_004_shading01.png" alt="NOLA Shading 01" class="secmodal-img" />
         </div>
-        <div class="secondModal_footer">NOLA</div>
+        <div class="secondModal_footer">NOLA Shading 01</div>
       </div>
     </div>
 
     <div class="secondModal" id="mySecModal6">
       <div class="secondModal_content">
-        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_header">NOLA Shading 02</div>
         <div class="secondModal_body">
-          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+          <img src="/assets/art/NOLA/NOLA_004_shading02.png" alt="NOLA Shading 02" class="secmodal-img" />
         </div>
-        <div class="secondModal_footer">NOLA</div>
+        <div class="secondModal_footer">NOLA Shading 02</div>
       </div>
     </div>
 
     <div class="secondModal" id="mySecModal7">
       <div class="secondModal_content">
-        <div class="secondModal_header">NOLA</div>
+        <div class="secondModal_header">NOLA Shading with Linework</div>
         <div class="secondModal_body">
-          <img src="/assets/art/NOLA/" alt="" class="secmodal-img" />
+          <img src="/assets/art/NOLA/NOLA_005_shadingWLinework.png" alt="NOLA Shading with Linework" class="secmodal-img" />
         </div>
-        <div class="secondModal_footer">NOLA</div>
+        <div class="secondModal_footer">NOLA Shading with Linework</div>
       </div>
     </div>
     <!--end of NOLA project images-->
