Fix modal issue of primary modals not closing
And also add twitter bookmarks project

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
         </div>
       </div>
 
+      <!--Twitter bookmarks-->
+      <div class="pcontainer filter-code">
+        <div class="card" id="project22">
+          <div class="is-active"></div>
+          <div class="item_content" id="project22text">
+            <p class="item_title">My twitter bookmarks</p>
+            <p class="item_description"></p>
+            <button class="modal-btn" href="#myModal20">click to explore more.</button>
+          </div>
+        </div>
+      </div>
+
       <!-- time to talk Game-->
       <div class="pcontainer filter-code">
         <div class="card" id="project7">
@@ -91,7 +103,6 @@
       </div>
       <!--end of project 7-->
 
-      
 
       <!--Cartridge collector game-->
       <div class="pcontainer filter-code">
@@ -2132,6 +2143,36 @@
         </div>
 
         <div class="modal-footer">Hole Face</div>
+
+      </div>
+    </div>
+
+    <!--twitter bookmarks modal-->
+    <div class="modal" id="myModal20">
+      <div class="modal-content">
+        
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          My Twitter Bookmarks
+        </div>
+
+        <div class="modal-body">
+
+          <figure class="mbc_container">
+            <img src="/assets/code/twitterBookmarks_submenu.jpg" alt="Twitter submenu" class="modal-img" />
+            <figcaption class="mbc_content">
+              <h3>Submenus</h3>
+              <p>The submenus here shown through these nested drop down menus make it convenient in categorizing my bookmarks.</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Twitter submenu</p>
+            </span>
+          </figure>
+
+
+        </div>
+
+        <div class="modal-footer">Twitter Bookmarks</div>
 
       </div>
     </div>
