Add more info to twitter bookmark app

--- a/index.html
+++ b/index.html
@@ -2157,18 +2157,44 @@
         </div>
 
         <div class="modal-body">
+          <figure class="mbc_container">
+            <h1>A web app to store my bookmarks</h1>
+            <p>This is a project I made from 2022. This is coded from scratch with React.JS.
+              Twitter at the time did not have a way to categorize bookmarked tweets and links so I thought this would be a convenient way to do so.
+              Plus I wanted to experiment with React and the components it offered.
+            </p>
+          </figure>
 
           <figure class="mbc_container">
             <img src="/assets/code/twitterBookmarks_submenu.jpg" alt="Twitter submenu" class="modal-img" />
-            <figcaption class="mbc_content">
-              <h3>Submenus</h3>
-              <p>The submenus here shown through these nested drop down menus make it convenient in categorizing my bookmarks.</p>
-            </figcaption>
             <span class="mbc_content-hover">
               <p>Twitter submenu</p>
             </span>
           </figure>
 
+          <figure class="mbc_container">
+            <h3>Submenus</h3>
+            <p>The submenus here shown through these nested drop down menus make it convenient in categorizing my bookmarks.</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/code/twitterBookmarks_codepreview.jpg" alt="bookmarks code preview" class="modal-img" />
+
+            <span class="mbc_content-hover">
+              <p>bookmarks code preview</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <h3>Code preview</h3>
+            <p>Above is a preview of the code.</p>
+            <p>Full repo can be accessed here :
+                <a href="https://github.com/ViLinh27/my-twitter-bookmarks">Link</a>
+            </p>
+            <p>The live site can be accessed here: 
+              <a href="https://mybookmarksbylinh.netlify.app">Link</a>
+            </p>
+          </figure>
 
         </div>
 
