Add some project descriptions

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="is-active"></div>
           <div class="item_content" id="project19text">
             <p class="item_title">Millicent Lost Her Eye</p>
-            <p class="item_description"></p>
+            <p class="item_description">A visual novel game that will let me experiment in python</p>
             <button class="proj_outsideLink"><a href="https://linh-is-tibia.itch.io/millicent-lost-her-eye">
               Click to explore
                 more.</a></button>
@@ -84,7 +84,7 @@
           <div class="is-active"></div>
           <div class="item_content" id="project22text">
             <p class="item_title">My twitter bookmarks</p>
-            <p class="item_description"></p>
+            <p class="item_description">A web app to categorize twitter links</p>
             <button class="modal-btn" href="#myModal20">click to explore more.</button>
           </div>
         </div>
