EverAfter High concept

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
     <!--- PROJECT GRID --->
     <div class="tabcontent" id="project-grid">
 
+      <!-- Ever After High-->
+      <div class="pcontainer filter-code">
+        <div class="card" id="project23">
+          <div class="is-active"></div>
+          <div class="item_content" id="project23text">
+            <p class="item_title">Ever After High</p>
+            <p class="item_description"></p>
+            <button class="modal-btn" href="#myModal21">click to explore more.</button>
+          </div>
+        </div>
+      </div>
+
       <!-- Millie game-->
       <div class="pcontainer filter-code">
         <div class="card" id="project19">
@@ -2203,6 +2215,68 @@
       </div>
     </div>
 
+    <!--Ever after high-->
+    <div class="modal" id="myModal21">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          Ever After High Redesign
+        </div>
+
+        <div class="modal-body">
+          <figure class="mbc_container">
+            <h1>Redesigning the main characters</h1>
+            <p>
+              This project based on a trend I had been seeing online.
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/everafterhigh/raven-head-designs.png" alt="head designs" class="modal-img" />
+            <span class="mbc_content-hover">
+              <p>Raven head designs</p>
+            </span>
+            <p>I started with redesigning Raven Queen.</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/everafterhigh/ravem-outfits.png" alt="raven" class="modal-img" />
+            <span class="mbc_content-hover">
+              <p>Raven</p>
+            </span>
+            <p>Raven</p>
+          </figure>
+
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/everafterhigh/apple-outfits.png" alt="Apple White" class="modal-img" />
+            <span class="mbc_content-hover">
+              <p>Apple White</p>
+            </span>
+            <p>Apple</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/everafterhigh/screenshot-redraw_01_flat.png" alt="screenshot flat redraw" class="modal-img" />
+            <span class="mbc_content-hover">
+              <p>Screen redraw Flat</p>
+            </span>
+            <p>Screenshot redraw flat</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/everafterhigh/screenshot-redraw-ref.jpg" alt="screenshot reference" class="modal-img" />
+            <span class="mbc_content-hover">
+              <p>Reference</p>
+            </span>
+            <p>Reference</p>
+          </figure>
+
+        </div>
+
+        <div class="modal-footer">Ever After High Redesign</div>
+      </div>
+    </div>
 
     <!-- <div class="modal" id="myModal-e">
       <div class="modal-content">
