typo issue with filters

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="tabcontent" id="project-grid">
 
       <!-- Ever After High-->
-      <div class="pcontainer filter-code">
+      <div class="pcontainer filter-art">
         <div class="card" id="project23">
           <div class="is-active"></div>
           <div class="item_content" id="project23text">
