art portfolio modal

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
     <!--- PROJECT GRID --->
     <div class="tabcontent" id="project-grid">
 
+      <!-- art porfolio process-->
+      <div class="pcontainer filter-code">
+        <div class="card" id="project25">
+          <div class="is-active"></div>
+          <div class="item_content" id="project25text">
+            <p class="item_title">Art Portfolio React Web App</p>
+            <p class="item_description">
+              Reviewing React by making a singular discipline web app, but make it whimsical.
+            </p>
+            <button class="modal-btn" href="#myModal23">Click to explore more.</button>
+          </div>
+        </div>
+      </div>
+
       <!--Throuple Concept-->
       <div class="pcontainer filter-art">
         <div class="card" id="project24">
@@ -2447,6 +2461,101 @@
     
         <div class="modal-footer">Table for 3</div>
       </div>
+    </div>
+
+    <!-- Art portfolio react web app-->
+    <div class="modal" id="myModal23">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          Art portfolio react web app
+        </div>
+
+        <div class="modal-body">
+          <figure class="mbc_container">
+            <!--header project text-->
+            <h3>Reviewing React js and making a more focused portfolio</h3>
+            <h1>To show more of what I can do as an illustrator and artist</h1>
+            <p>A portfolio focused on one disclipline (art) would be easier to market anyway</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <!--project image and text-->
+            <img src="/assets/code/artportfolio-react/artportfolio2025.drawio.png" alt="user flow" class="modal-img"/><!--class="modal-img"-->
+            <h3>The user flow</h3>
+            <p>
+              I used a flow chart to help me envision the user path of how they would navigate my art portfolio site.
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <!--project image and text-->
+            <img src="/assets/code/artportfolio-react/figma-planout.jpg" alt="figma plan out" class="modal-img"/>
+            <h3>Planning it out</h3>
+            <p>
+              First I had to plan out all the content that was going to go on the portfolio and how to organize it. Milanote was convenient in how you could spread out all the info cards.
+            </p>
+            <p>
+              Here is the milanote spread to help plan out the content: <a href="https://app.milanote.com/1UfFP51a73qSev?p=X0SR3m1U7ne">milanote link</a>
+            </p>
+            <p>Next I made a very lowfi prototype in figma. This site originally started out as a photo gallery type of idea. But seeing Emma Orhun's website and how she made it look like an analogue paper website, really made me rethink the design.
+              Here is her website: <a href="https://emma.design">Emma Orhun site</a>. I also used Shar Yap's website for heavy inspiration too if you're curious at some more inspiration: <a href="https://www.sharyap.com">Shar's site</a>
+            </p>
+            <p>
+              Here is the link to the figma prototype: <a href="https://www.figma.com/proto/WLOwzvqHfDwg6gT6DBYgCi/me-site-Lofi-2025?node-id=13-362&p=f&t=upKhf6kuiUPrEM5L-1&scaling=min-zoom&content-scaling=fixed&page-id=13%3A262
+">prototype link</a>
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <!--project image and text-->
+            <img src="/assets/code/artportfolio-react/homepage-lightmode.jpg" alt="homepage light" class="modal-img" />
+            <h3>The home page in light mode</h3>
+            <p>
+              I'm still working on the code right now, but above is a preview of the homepage in light mode.
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <!--project image and text-->
+            <img src="/assets/code/artportfolio-react/homepage-darkmode.jpg" alt="homepage dark mode" class="modal-img"/>
+            <h3>The home page in dark mode</h3>
+            <p>
+              The user will be able to toggle between dark and light mode for their convenience and overall user experience.
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <!--project image and text-->
+            <img src="/assets/code/artportfolio-react/project-page.jpg" alt="project page" class="modal-img"/>
+            <h3>Individual Project page</h3>
+            <p>
+              The individual project page will explain more about the process of the project (still working on that though). The images are still kept to the polaroid photo aesthetic.
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <!--project image and text-->
+            <img src="/assets/code/artportfolio-react/project-page-modalphoto.jpg" alt="polaroid photo" class="modal-img"/>
+            <h3>Individual Project page modal</h3>
+            <p>
+              The user will be able to click on any polaroid photo to see a complete view of the image in a separate modal.
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <!--project image and text-->
+            <img src="/assets/code/artportfolio-react/about-me.jpg" alt="about me page" class="modal-img" />
+            <h3>About me</h3>
+            <p>
+              I styled some washi tape to decorate the polaroid photos on the about page, but I do admit, the styling still needs work.
+            </p>
+          </figure>
+
+        </div>
+
+        <div class="modal-footer">Art portfolio react web app</div>
+      </div><!--end of modal content-->
     </div>
 
     <!-- <div class="modal" id="myModal-e">
