fix project filter

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </div>
 
       <!--ios book tracker app-->
-      <div class="pcontainer filter-ux">
+      <div class="pcontainer filter-code">
         <div class="card" id="project11">
         <div class="is-active"></div>
         <div class="item_content" id="proj11text">
