videos need work
avi is a bitch to convert

--- a/index.html
+++ b/index.html
@@ -405,6 +405,19 @@
         </div>
       </div>
       <!--end of project item 4-->
+
+      <!-- animation studies-->
+      <div class="pcontainer filter-art">
+        <div class="card" id="project27">
+          <div class="is-active"></div>
+          <div class="item_content" id="project27text">
+            <p class="item_title">Animation Studies</p>
+            <p class="item_description">Some old projects from my undergraduate studies exploring animation</p>
+            <button class="modal-btn" href="#myModal25">Click to explore more.</button>
+          </div>
+        </div>
+      </div>
+      <!--end of animation studies-->
       
     </div>
     <!--end of project grid-->
@@ -2346,7 +2359,7 @@
               This was one of the starts to the concept project. I found a drawing meme online (pictured below) 
               with a bunch of polyamorous poses to try.
             </p>
-            <video class="modal-gallery-videos" controls>
+            <video clavideoss="modal-gallery-videos" controls>
               <source src="/assets/art/tablefor3/Back2back.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -2650,6 +2663,56 @@
         </div>
         
         <div class="modal-footer">Me website</div>
+      </div>
+    </div>
+
+    <!-- animation studies-->
+    <div class="modal" id="myModal25">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h1>Exploration of animation</h1>
+        </div>
+
+        <div class="modal-body">
+          <figure class="mbc_container">
+            <h3>Starting off in 3d animation</h3>
+            <p>
+              I started off focusing in 3d animation when I first entered university. We used mostly Autodesk Maya to work with as a software.
+              These are a few of the explorations I had during that time. I did eventually shift to different parts of animation though.
+            </p>
+          </figure>
+
+          <figure class="mbc_container">
+            <video clavideoss="modal-gallery-videos" controls>
+              <source src="/assets/art/animationstudies/" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+            <p>Tail acting exercise from 2018</p>
+            <p>This is a build up of the fundamentals of animation we learned, like the bouncing ball, anticipation and follow through.</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <video clavideoss="modal-gallery-videos" controls>
+              <source src="/assets/art/animationstudies/" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+            <p>Basic walking 2018</p>
+            <p>This exercise although still in stepped, would apply the principles learned from the bouncing ball into a step above kind of foundational animation to learn.</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <video clavideoss="modal-gallery-videos" controls>
+              <source src="/assets/art/animationstudies/" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+            <p>Ball Bouncing review 2018</p>
+            <p>This was an upper level class in the animation curriculum but it's always good to review the basics. See how the timing instinct is instilled in you as an animator.</p>
+          </figure>
+
+        </div>
+
+        <div class="modal-footer">Animation Studies</div>
       </div>
     </div>
 
