fix typos and get in the imbed links

--- a/index.html
+++ b/index.html
@@ -2359,7 +2359,7 @@
               This was one of the starts to the concept project. I found a drawing meme online (pictured below) 
               with a bunch of polyamorous poses to try.
             </p>
-            <video clavideoss="modal-gallery-videos" controls>
+            <video class="modal-gallery-videos" controls>
               <source src="/assets/art/tablefor3/Back2back.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -2671,7 +2671,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="close">&times;</span>
-          <h1>Exploration of animation</h1>
+          <h1>Exploration of 3d animation</h1>
         </div>
 
         <div class="modal-body">
@@ -2684,28 +2684,22 @@
           </figure>
 
           <figure class="mbc_container">
-            <video clavideoss="modal-gallery-videos" controls>
-              <source src="/assets/art/animationstudies/" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe width="560" height="315" src="https://youtube.com/embed/qmCKtxRta4c?feature=share"></iframe>
             <p>Tail acting exercise from 2018</p>
             <p>This is a build up of the fundamentals of animation we learned, like the bouncing ball, anticipation and follow through.</p>
           </figure>
 
           <figure class="mbc_container">
-            <video clavideoss="modal-gallery-videos" controls>
-              <source src="/assets/art/animationstudies/" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/jdtec1oz9qc"></iframe>
             <p>Basic walking 2018</p>
             <p>This exercise although still in stepped, would apply the principles learned from the bouncing ball into a step above kind of foundational animation to learn.</p>
           </figure>
 
           <figure class="mbc_container">
-            <video clavideoss="modal-gallery-videos" controls>
-              <source src="/assets/art/animationstudies/" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vkHg5ee4Udc?si=6Lu9bidqk9vOIgws"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p>Ball Bouncing review 2018</p>
             <p>This was an upper level class in the animation curriculum but it's always good to review the basics. See how the timing instinct is instilled in you as an animator.</p>
           </figure>
