add live site links

--- a/index.html
+++ b/index.html
@@ -2519,6 +2519,7 @@
             <h1>Reviewing React js and making a more focused portfolio</h1>
             <h3>To show more of what I can do as an illustrator and artist</h3>
             <p>A portfolio focused on one disclipline (art) would be easier to market anyway</p>
+            <p>Live site link: <a href="https://linhs-artroom.vercel.app"> Art portfolio live site</a></p>
           </figure>
 
           <figure class="mbc_container">
@@ -2590,8 +2591,12 @@
             <img src="/assets/code/artportfolio-react/about-me.jpg" alt="about me page" class="modal-img" />
             <h3>About me</h3>
             <p>
-              I styled some washi tape to decorate the polaroid photos on the about page, but I do admit, the styling still needs work.
+              I styled some washi tape to decorate the polaroid photos on the about page, but I do admit, the styling still needs work at the stage the image shows.
             </p>
+            <p>
+              I've finished the site at this point and it is now live. I will work on it more as i find more user issues, as well as add more content, the more I work in projects:
+            </p>
+            <a href="https://linhs-artroom.vercel.app"> Art portfolio live site</a>
           </figure>
 
         </div>
@@ -2606,6 +2611,8 @@
         <div class="modal-header">
           <span class="close">&times;</span>
           <h1>Me and My Stuff Website</h1>
+          <p>Live site link:</p>
+          <p><a href="https://linh-rooms.vercel.app">https://linh-rooms.vercel.app</a></p>
         </div>
         
         <div class="modal-body">
