update faulty link

--- a/index.html
+++ b/index.html
@@ -2612,7 +2612,7 @@
           <span class="close">&times;</span>
           <h1>Me and My Stuff Website</h1>
           <p>Live site link:</p>
-          <p><a href="https://linh-rooms.vercel.app">https://linh-rooms.vercel.app</a></p>
+          <p><a href="https://vilinh27-rooms.vercel.app">https://vilinh27-rooms.vercel.app</a></p>
         </div>
         
         <div class="modal-body">
