add in electron modal and new project card
still need info to add in about electron projects

--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
         </div>
       </div>
 
+      <!-- electron experiments-->
+      <div class="pcontainer filter-code">
+        <div class="card" id="project29">
+          <div class="is-active"></div>
+          <div class="item_content" id="project29text">
+            <p class="item_title">Experiments with Electron</p>
+            <p class="item_description">Little projects that will help me learn the JS framwork inspired by Nashallery</p>
+            <button class="modal-btn" href="#myModal27">Click to explore more.</button>
+          </div>
+        </div>
+      </div>
+
       <!--Throuple Concept-->
       <div class="pcontainer filter-art">
         <div class="card" id="project24">
@@ -2688,7 +2700,7 @@
       </div>
     </div>
 
-<!--3d sculpting-->
+    <!--3d sculpting-->
     <div class="modal" id="myModal26">
       <div class="modal-content">
         <div class="modal-header">
@@ -2791,6 +2803,35 @@
         </div>
 
         <div class="modal-footer">Animation Studies</div>
+      </div>
+    </div>
+
+    <!-- electron experiments-->
+    <div class="modal" id="myModal27">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h1>Experimenting with Electron, the JS framework</h1>
+        </div>
+
+        <div class="modal-body">
+          <div class="mbc_container">
+            <h3>Title</h3>
+            <p>Description</p>
+          </div>
+
+          <div class="mbc_container">
+            <p>Electron Baking timer</p>
+          </div>
+
+          <div class="mbc_container">
+            <p>Electron Youtube filing cabinet</p>
+          </div>
+
+          <div class="modal-footer">Experiments with Electron</div>
+
+        </div>
+
       </div>
     </div>
 
