add more info to electron page

--- a/index.html
+++ b/index.html
@@ -2811,21 +2811,52 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="close">&times;</span>
-          <h1>Experimenting with Electron, the JS framework</h1>
+          <h1>Experimenting with Electron</h1>
         </div>
 
         <div class="modal-body">
           <div class="mbc_container">
-            <h3>Title</h3>
-            <p>Description</p>
+            <h3>Trying out a new framwework</h3>
+            <p>
+              The goal of these mini projects was to help teach myself Electron. 
+              These are inspired by my sister's similar project goal and an artist/coder we both follow 
+              online called nashallery.
+            </p>
           </div>
 
           <div class="mbc_container">
-            <p>Electron Baking timer</p>
+            <h4>Electron Baking timer</h4>
+            <p>
+              This project is simply a timer toy that allows the user to set a timer based on a specified
+              baked good.
+            </p>
+            <p>
+              Here is the github where the code and process in making this application has
+              been documented:
+              <a href="https://github.com/ViLinh27/bakingtimer">See the code behind this app on github</a>
+            </p>
+            <p>
+              Here is the link to the itch.io page to download the application: 
+              <a href="https://linh-is-tibia.itch.io/tibias-baking-timer">Download the baking timer</a>
+            </p>
           </div>
 
           <div class="mbc_container">
-            <p>Electron Youtube filing cabinet</p>
+            <h4>Electron Youtube filing cabinet</h4>
+            <p>
+              This project was another attempt at trying out the electron framework but to solve a personal
+              problem of mine. I'm subscribed to an obscene amount of people on youtube and I wanted a way
+              to categorize them.
+            </p>
+            <p>
+              Here is the github where the code and process in making this application has
+              been documented:
+              <a href="https://github.com/ViLinh27/myYoutubeFileCabinet">See the github repo here</a>
+            </p>
+            <p>
+              Here is the link to the itch.io page to download the applciation:
+              <a href="https://linh-is-tibia.itch.io/my-youtube-filing-cabinet">Download the app here</a>
+            </p>
           </div>
 
           <div class="modal-footer">Experiments with Electron</div>
